# chitchat-dataset

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  release.yaml
chitchat_dataset/: __init__.py  test_dataset.py
examples/: example.jl  example.py  example.rs
