# https://flit.readthedocs.io/en/latest/
[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "chitchat_dataset"
author = "William Myers"
author-email = "mwilliammyers@gmail.com"
home-page = "https://github.com/byu-pccl/chitchat-dataset"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"