[tool.poetry]
name = "chitchat-dataset"
version = "0.2.0"
description = """\
    Open-domain conversational dataset \
    from the BYU Perception, Control & Cognition lab's Chit-Chat Challenge.\
"""
authors = ["William Myers <mwilliammyers@gmail.com>"]
license = "MIT"
keywords = ["dataset", "science", "machine learning", "conversation"]

[tool.poetry.dependencies]
# TODO: require an older python3 version; some dev dependencies require ^3.6
python = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
