[tool.poetry]
name = "chitchat-dataset"
version = "0.3.0"
description = """\
    Open-domain conversational dataset \
    from the BYU Perception, Control & Cognition lab's Chit-Chat Challenge.\
"""
authors = ["William Myers <mwilliammyers@gmail.com>"]
license = "MIT"
keywords = ["dataset", "science", "machine learning", "conversation"]

[tool.poetry.dependencies]
# TODO: require an older python3 version; some dev dependencies require ^3.6
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8-annotations = "^2.0.1"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-deprecated = "^1.3"
flake8-docstrings = "^1.5.0"
flake8-isort = "^2.9.1"
flakehell = "^0.3.3"
isort = { extras = ["pyproject"], version = "^4.3.21" }
mypy = "^0.770"
pep8-naming = "^0.10.0"

[tool.flakehell]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".venv",
  "*.egg-info",
  "build",
  "dist",
]
max_line_length = 88
max_doc_length = 88
max_complexity = 10
docstring_convention = "google"
no_isort_config = true
ignore = [
  # Missing type annotation for self in method
  "ANN101",
  # Missing type annotation for *args
  "ANN002",
  # Missing type annotation for **kwargs
  "ANN003",
]

[tool.flakehell.plugins]
"*" = ["+*"]

[tool.isort]
# replace these configs with `profile = "black"` once v5.0.0 lands
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
